src/test/compile-fail/attr-dangling-in-fn.rs
// xfail-stage0
// error-pattern:expected item

fn f() {
  #[foo = "bar"]
}

fn main() {
}
